--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.16.1"
+  },
   "scripts": {
     "heroku-prebuild": "npm install --dev",
     "start": "webpack-dev-server --config webpack.config.js -p",
@@ -16,7 +19,8 @@
     "image-webpack-loader": "^6.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "sass": "^1.56.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -28,7 +32,6 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
